--- a/sysadmin/templates/sysadmin/admin-unit.html
+++ b/sysadmin/templates/sysadmin/admin-unit.html
@@ -32,19 +32,29 @@
 
     <!-- SEARCH BAR AND DESELECT-DELETE TAKE UP THE SAME SPOT. THEY ARE ACTIVATED AND DEACTIVATED RESPECTIVELY-->
     <form action="" id="tab-search">
-        <input id="search" type="text" name="search-unit" placeholder="Search a unit...">
+        <input id="search" type="text" name="query" placeholder="Search a unit...">
     </form>
 
     <!-- DESELECT-DELETE -->
     <!--<div id="deselect-delete">
         <button id="deselect">Deselect All</button>-->
-    <button id="delete">Delete Selected Unit(s)</button>
+    <form action="" id="delete-units" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="form-type" value="delete-unit">
+        <button type="button" onclick="delete_units()" id="delete">Delete Selected Unit(s)</button>
+    </form>
     <!--</div>-->
 </div>
 
 <!-- CONTAINER WHERE TABS WILL OCCUPY -->
 <div id="tab-container">
-
+    {% if messages %}
+        <div>
+            {% for message in messages %}
+                <p {% if message.tags %}id="{{ message.tags }}"{% endif %}>{{ message }}</p>
+            {% endfor %}
+        </div>
+    {% endif %}
     <!-- FIRST TAB -->
     <div id="All" class="tab-content">
         <div id="table-container">
@@ -59,9 +69,10 @@
             <!-- TEMPLATES FOR DATA INSERTION. NOTE THAT THERE IS A "row-1" AND "row-2"  FOR THEIR ALTERNATING COLORS -->
             {% for unit in units %}
                 <div class="table-row {% cycle 'row-1' 'row-2' %}">
-                    <div class="col-checkbox"><input type="checkbox" name="check" onclick="selected(this)"></div>
+                    <div class="col-checkbox"><input type="checkbox" name="check" value="{{ unit.id }}"
+                                                     onclick="selected(this)"></div>
                     <div class="col-college">
-                        <div class="name" onclick="edit(this)">
+                        <div class="name">
                             {% if unit.college is None %}
                                 None
                             {% else %}
@@ -92,29 +103,19 @@
     </div>
 
     <!-- SECOND TAB (FORM TAB)-->
-    <form action="" id="Add" class="tab-content">
+    <form action="" id="Add" class="tab-content" method="POST">
+
         <div class="info-fields-container">
-            <div class="info-container">
-                <div class="info-label"> College</div>
-                <select class="info-input" name="cand-college">
-                    <option>CCS</option>
-                    <option>COB</option>
-                    <option>COE</option>
-                    <option>CLA</option>
-                    <option>COS</option>
-                </select>
-            </div>
-
-            <div class="info-container">
-                <div class="info-label"> Batch</div>
-                <input type="text" class="info-input" name="cand-id" placeholder="ex. 116">
-            </div>
-
-            <div class="info-container">
-                <div class="info-label"> Unit Name</div>
-                <input type="text" class="info-input" name="cand-id" placeholder="ex. ABSOLUTEUNIT">
-            </div>
-
+            {% csrf_token %}
+            <input type="hidden" name="form-type" value="add-unit">
+            {% if unit_form %}
+                {% for field in unit_form %}
+                    <div class="info-container">
+                        <div class="info-label">{{ field.label }}</div>
+                        {{ field }}
+                    </div>
+                {% endfor %}
+            {% endif %}
         </div>
 
         <div class="info-buttons-container">
@@ -123,40 +124,6 @@
             <input class="button confirm" type="submit" value="Add new unit">
         </div>
     </form>
-
-    <!-- THIRD HIDDEN TAB (EDIT TAB)-->
-    <form action="" id="Edit" class="tab-content">
-        <div class="info-fields-container">
-            <div class="info-container">
-                <div class="info-label"> College</div>
-                <select class="info-input" name="cand-college">
-                    <option>CCS</option>
-                    <option>COB</option>
-                    <option>COE</option>
-                    <option>CLA</option>
-                    <option>COS</option>
-                </select>
-            </div>
-
-            <div class="info-container">
-                <div class="info-label"> Batch</div>
-                <input type="text" class="info-input" name="cand-id" placeholder="ex. 116">
-            </div>
-
-            <div class="info-container">
-                <div class="info-label"> Unit Name</div>
-                <input type="text" class="info-input" name="cand-id" placeholder="ex. ABSOLUTEUNIT">
-            </div>
-
-        </div>
-
-        <div class="info-buttons-container">
-            <button class="button cancel">Cancel</button>
-            <!-- SUBMIT BUTTON FOR THE TAB -->
-            <input class="button confirm" type="submit" value="Save Changes">
-        </div>
-    </form>
-
 
 </div>
 
