Officer: Completed Voters List functionalities

--- a/passcode/templates/passcode/password_generator.html
+++ b/passcode/templates/passcode/password_generator.html
@@ -13,8 +13,8 @@
     <link href="{% static 'passcode/css/elements/link.css' %}" rel="stylesheet" type="text/css"/>
 
     <!-- ACCESSED THE CSS IN SYSADMIN -->
-    <link rel="stylesheet" type="text/css" href="{% static 'sysadmin/css/components/officer.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'sysadmin/css/components/officer-candidate.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'passcode/css/components/officer.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'passcode/css/components/officer-candidate.css' %}"/>
     <!-- <link rel="stylesheet" type="text/css" href="../../static/sysadmin/css/components/officer.css" />
     <link rel="stylesheet" type="text/css" href="../../static/sysadmin/css/components/officer-candidate.css" /> -->
 
@@ -24,14 +24,13 @@
 <body>
 
 <div id="header-container">
-    <img id="header-ballot" src="{% static 'sysadmin/assets/svg/ballot-white.svg' %}">
-    <a href="{% url 'sysadmin:voters' %}">Voter's List</a>
-    <a href="{% url 'sysadmin:candidates' %}">Candidate's List</a>
-    <a href="{% url 'sysadmin:officers' %}">Comelec Officers</a>
-    <a href="{% url 'sysadmin:unit' %}">Unit</a>
-    <a href="{% url 'passcode:passcode' %}" id="selected">Password Generator</a>
+    <img id="header-ballot" src="{% static 'passcode/assets/svg/ballot-white.svg' %}">
+    <a href="{% url 'passcode:voters' %}">Voters List</a>
+    <a href="{% url 'passcode:candidates' %}">Candidates List</a>
+    <a href="{% url 'passcode:results' %}">Voting Results</a>
+    <a href="{% url 'passcode:passcode' %}" id="selected">Passcode generator</a>
     <div id="user-container">
-        <img id="user-icon" src="{% static 'sysadmin/assets/svg/user.svg' %}">
+        <img id="user-icon" src="{% static 'passcode/assets/svg/user.svg' %}">
         <div id="user-name"> Troy Bolton</div>
         <a id="log-out">Log out</a>
     </div>
