--- a/passcode/templates/passcode/officer-voter.html
+++ b/passcode/templates/passcode/officer-voter.html
@@ -18,8 +18,8 @@
     <a href="{% url 'passcode:passcode' %}">Passcode generator</a>
     <div id="user-container">
         <img id="user-icon" src="{% static 'passcode/assets/svg/user.svg' %}">
-        <div id="user-name"> Troy Bolton</div>
-        <a id="log-out">Log out</a>
+        <div id="user-name"> {{ user.first_name }} {{ user.last_name }}</div>
+        <a id="log-out" href="{% url 'logout:logout' %}">Logout</a>
     </div>
 
 </div>
