--- a/logout/templates/logout/fail.html
+++ b/logout/templates/logout/fail.html
@@ -24,26 +24,10 @@
 </head>
 <body>
 <div id="success-container">
-    <div id="success-title">Success!</div>
-    <div id="success-subtitle">Thank you so much for voting!</div>
-
-    <div id="instruction-container" class="clearfix">
-        <div class="instruction-cell">
-            <img src="{% static 'logout/assets/svg/exit.svg' %}" class="instruction-img"/>
-            <p class="instruction-text">You may now exit the polling booth.</p>
-        </div>
-        <div class="instruction-cell">
-            <img src="{% static 'logout/assets/svg/sign-paper.svg' %}" class="instruction-img"/>
-            <p class="instruction-text">Go to table B and sign the paper.</p>
-        </div>
-        <div class="instruction-cell">
-            <img src="{% static 'logout/assets/svg/id.svg' %}" class="instruction-img"/>
-            <p class="instruction-text">Oh yeah! Don't forget your ID.</p>
-        </div>
-    </div>
+    <div id="success-title">You have already voted!</div>
 
     <div id="success-link">
-        Got it? <a href="{% url 'login:login' %}">Click here</a>
+        Got it? <a href="{% url 'login:login' %}">Click here to login</a>
     </div>
 
     <img src="{% static 'logout/assets/png/org-logos.png' %}" id="success-org-logos">
