--- a/passcode/templates/passcode/officer-voter.html
+++ b/passcode/templates/passcode/officer-voter.html
@@ -14,8 +14,8 @@
     <img id="header-ballot" src="{% static 'passcode/assets/svg/ballot-white.svg' %}">
     <a href="{% url 'passcode:voters' %}" id="selected">Voters List</a>
     <a href="{% url 'passcode:candidates' %}">Candidates List</a>
-    <a href="{% url 'passcode:results' %}">Voting Results</a>
-    <a href="{% url 'passcode:passcode' %}">Passcode generator</a>
+    <a href="{% url 'passcode:results' %}">Election Dashboard</a>
+    <a href="{% url 'passcode:passcode' %}">Passcode Generator</a>
     <div id="user-container">
         <img id="user-icon" src="{% static 'passcode/assets/svg/user.svg' %}">
         <div id="user-name"> {{ user.first_name }} {{ user.last_name }}</div>
