--- a/passcode/templates/passcode/password_generator.html
+++ b/passcode/templates/passcode/password_generator.html
@@ -27,12 +27,12 @@
     <img id="header-ballot" src="{% static 'passcode/assets/svg/ballot-white.svg' %}">
     <a href="{% url 'passcode:voters' %}">Voters List</a>
     <a href="{% url 'passcode:candidates' %}">Candidates List</a>
-    <a href="{% url 'passcode:results' %}">Voting Results</a>
-    <a href="{% url 'passcode:passcode' %}" id="selected">Passcode generator</a>
+    <a href="{% url 'passcode:results' %}">Election Dashboard</a>
+    <a href="{% url 'passcode:passcode' %}" id="selected">Passcode Generator</a>
     <div id="user-container">
         <img id="user-icon" src="{% static 'passcode/assets/svg/user.svg' %}">
-        <div id="user-name"> Troy Bolton</div>
-        <a id="log-out">Log out</a>
+        <div id="user-name"> {{ user.first_name }} {{ user.last_name }}</div>
+        <a id="log-out" href="{% url 'logout:logout' %}">Logout</a>
     </div>
     <!--
 			<div id="user-container">
