--- a/vote/static/vote/css/components/voting.css
+++ b/vote/static/vote/css/components/voting.css
@@ -36,3 +36,21 @@
     background-color: white;
     text-align: center;
 }
+
+#error {
+    color: red;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    font-weight: 700;
+    margin-left: 10px;
+    line-height: 1.75rem;
+}
+
+#success {
+    color: green;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    font-weight: 700;
+    margin-left: 10px;
+    line-height: 1.75rem;
+}
