--- a/passcode/templates/passcode/officer-candidate.html
+++ b/passcode/templates/passcode/officer-candidate.html
@@ -14,7 +14,7 @@
     <img id="header-ballot" src="{% static 'passcode/assets/svg/ballot-white.svg' %}">
     <a href="{% url 'passcode:voters' %}">Voters List</a>
     <a href="{% url 'passcode:candidates' %}" id="selected">Candidates List</a>
-    <a href="{% url 'passcode:results' %}">Election Dashboard</a>
+    <a href="{% url 'passcode:elections' %}">Election Dashboard</a>
     <a href="{% url 'passcode:passcode' %}">Passcode Generator</a>
     <div id="user-container">
         <img id="user-icon" src="{% static 'passcode/assets/svg/user.svg' %}">
@@ -79,12 +79,10 @@
                 <div class="table-row {% cycle 'row-1' 'row-2' %}">
                     <div class="col-checkbox"></div>
                     <div class="col-name">
-                        <div class="name">
-                            {{ candidate.voter.user.last_name }}, {{ candidate.voter.user.first_name }}
-                        </div>
+                        {{ candidate.voter.user.last_name }}, {{ candidate.voter.user.first_name }}
                     </div>
                     <div class="col-id">{{ candidate.voter.user.username }}</div>
-                    <div class="col-position">{{ candidate.position.name }} ({{ candidate.position.unit.name }})</div>
+                    <div class="col-position">{{ candidate.position.base_position.name }} ({{ candidate.position.unit.name }})</div>
                     <div class="col-party">
                         {% if candidate.party %}
                             {{ candidate.party.name }}
@@ -107,16 +105,13 @@
             <span class="step-links">
                 {% if candidates.has_previous %}
                     <a href="?page=1{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">&laquo; first</a>
-                    <a href="?page=
-                            {{ candidates.previous_page_number }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">previous</a>
+                    <a href="?page={{ candidates.previous_page_number }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">previous</a>
                 {% endif %}
                 <span class="current">Page {{ candidates.number }} of {{ candidates.paginator.num_pages }}.</span>
 
                 {% if candidates.has_next %}
-                    <a href="?page=
-                            {{ candidates.next_page_number }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">next</a>
-                    <a href="?page=
-                            {{ candidates.paginator.num_pages }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">last &raquo;</a>
+                    <a href="?page={{ candidates.next_page_number }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">next</a>
+                    <a href="?page={{ candidates.paginator.num_pages }}{% if request.GET.query %}&query={{ request.GET.query }}{% endif %}">last &raquo;</a>
                 {% endif %}
             </span>
         </div>
