--- a/passcode/templates/passcode/password_generator.html
+++ b/passcode/templates/passcode/password_generator.html
@@ -27,7 +27,7 @@
     <img id="header-ballot" src="{% static 'passcode/assets/svg/ballot-white.svg' %}">
     <a href="{% url 'passcode:voters' %}">Voters List</a>
     <a href="{% url 'passcode:candidates' %}">Candidates List</a>
-    <a href="{% url 'passcode:results' %}">Election Dashboard</a>
+    <a href="{% url 'passcode:elections' %}">Election Dashboard</a>
     <a href="{% url 'passcode:passcode' %}" id="selected">Passcode Generator</a>
     <div id="user-container">
         <img id="user-icon" src="{% static 'passcode/assets/svg/user.svg' %}">
@@ -57,11 +57,13 @@
     </form>
 
     <div id="result">
-        {% if message == 'dne' %}
+        {% if message == 'DNE' %}
             <b>Oops!</b> There is no passcode for that.
-        {% elif message == 'ai' %}
+        {% elif message == 'AI' %}
             <b>Oops!</b> That user is currently voting.
-        {% elif message == 'ir' %}
+        {% elif message == 'AV' %}
+            <b>Oops!</b> That user has already voted.
+        {% elif message == 'IR' %}
             <b>Oops!</b> You've just made an invalid request.
         {% elif message != '' %}
             Your passcode: <b>{{ message }}</b>
